--- a/milestones/milestone-04-Database-setup&Application-styling/package.json
+++ b/milestones/milestone-04-Database-setup&Application-styling/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "pg": "^8.11.3",
     "node-pg-migrate": "^6.2.2",
     "bcrypt": "^5.1.1",
